--- a/Home Assignment 3/OReL HA3 Davide Marchi.tex
+++ b/Home Assignment 3/OReL HA3 Davide Marchi.tex
@@ -63,7 +63,7 @@
 \input{1.tex}
 
 \section{Off-Policy Optimization in RiverSwim}
-%\input{2.tex}
+\input{2.tex}
 
 \section{Reward Shaping}
 %\input{3.tex}
