--- a/Home Assignment 3/OReL HA3 Davide Marchi.tex
+++ b/Home Assignment 3/OReL HA3 Davide Marchi.tex
@@ -66,7 +66,7 @@
 \input{2.tex}
 
 \section{Reward Shaping}
-%\input{3.tex}
+\input{3.tex}
 
     
 \bibliography{bibliography}  % If you have some references, use BibTeX
