--- a/Home Assignment 4/OReL HA4 Davide Marchi.tex
+++ b/Home Assignment 4/OReL HA4 Davide Marchi.tex
@@ -60,7 +60,7 @@
 
 
 \section{Policy Gradient Methods}
-%\input{1.tex}
+\input{1.tex}
 
 \section{Improved Parametrization of UCB1}
 (Optional, but highly recommended)
