Completed ex 3 without formulas (TODO?)

--- a/Home Assignment 4/OReL HA4 Davide Marchi.tex
+++ b/Home Assignment 4/OReL HA4 Davide Marchi.tex
@@ -63,10 +63,10 @@
 \input{1.tex}
 
 \section{Improved Parametrization of UCB1}
-(Optional, but highly recommended)
+(Optional)
 
 \section{Introduction of New Products}
-%\input{2.tex}
+\input{2.tex}
 
 \section{Empirical comparison of FTL and Hedge}
 %\input{3.tex}
