Esecuted code and first versione of ex3

--- a/Home Assignment 4/OReL HA4 Davide Marchi.tex
+++ b/Home Assignment 4/OReL HA4 Davide Marchi.tex
@@ -69,7 +69,7 @@
 \input{2.tex}
 
 \section{Empirical comparison of FTL and Hedge}
-%\input{3.tex}
+\input{3.tex}
 
     
 \bibliography{bibliography}  % If you have some references, use BibTeX
